--- a/blogify/templates/base.html
+++ b/blogify/templates/base.html
@@ -15,6 +15,8 @@
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
   <script src="{% static 'js/bootstrap.js' %}"></script>
   <script src="{% static 'js/popper.min.js' %}"></script>
+  <script src="{% static 'js/popper.min.js.map' %}"></script>
+  <script src="{% static 'js/popper.js' %}"></script>
   <script src="{% static 'js/jquery.min.js' %}"></script>
   <style>
     a {
